# llm-platform-primitives

./: .gitignore  AGENTS_MCP_SHOWCASE.md  COMPLETE_PLATFORM_OVERVIEW.md  CONVERSATION_GUIDE.py  CONVERSATION_SCENARIOS_SUMMARY.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  evals.yml
app/: __init__.py  agent.py  custom_llm_agent.py  model.py  root_agent.py
app/agents/: __init__.py  agents_config.py  analytics_agents.py  business_agents.py  content_agents.py  dev_agents.py  devops_agents.py  ml_agents.py  research_agents.py  specialized_agents.py
gateway/: __init__.py  auth_server.py  authz.py  engine.py  gateway_server.py  helper.py  models.py  policies.yaml  users.yaml
intent_classifier/: __init__.py  classifier.py  intent_rules.yml
mcp_server/: analytics_mcp copy.py  analytics_mcp.py  authz_middleware.py  http_bridge_team_a.py  http_bridge_team_b.py  http_bridge_team_c.py  mcp_functions.py  requirements.txt  server.py  server_common.py  server_team_a.py  server_team_b.py  server_team_c.py
observability/logging/: __init__.py
observability/metrics/: __init__.py  collector.py
observability/token_counter/: calculator.py
observability/token_counter/algorithms/: __init__.py  base.py  bpe.py  wordpiece.py
prompt_registry/: __init__.py  prompts.py  registry.py
skills/workflow-skill/: SKILL.md
tests/: conftest.py
tests/evals/: test_agent_eval.py
tests/evals/data/: root_agent.evalset.json  test_config.json
tests/integration/: test_gateway_server.py  test_main_app.py
tests/unit/: test_agent.py  test_app_model.py  test_authz.py  test_engine.py  test_helper.py  test_intent_classifier.py  test_logging.py  test_mcp_servers.py  test_metrics.py  test_models.py  test_prompt_registry.py  test_token_counter.py
token_counter/: __init__.py  model_registry.py
token_counter/algorithms/: unigram.py
