[project]
name = "llm-platform-primitives"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth",
    "google-genai",
    "google-adk[extensions,mcp]",
    "litellm",
    "mcp>=1.24,<2",
    "fastmcp>=3.2.0",
    "pyyaml",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pyjwt>=2.8.0",
]
